fixed map, remove navbar from landing page, styled collapsed navbuttons on each page, weekender image now goes to landing

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -46,3 +46,15 @@
     margin-top: 2%;
     margin-bottom: 2%;
 }
+.navbar-toggler {
+    background-color: green;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+#collapsibleNavbar {
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
